--- a/configuration/experiment_config.yml
+++ b/configuration/experiment_config.yml
@@ -2,10 +2,9 @@ random_state: 4200
 retrain: True
 # List of models to include in the experiment
 include_models:
-  #- XGB  # Extreme Gradient Boosting
-  #- CatBoost
-  #- MLP  # Multi-Layer Perceptron
-
+  - XGB  # Extreme Gradient Boosting
+  - CatBoost
+  - MLP  # Multi-Layer Perceptron
   - TabNet  # TabNet Classifier 
   - GATE 
   - Node
@@ -22,16 +21,18 @@ include_models:
 
 # List of datasets to include in the experiment
 include_datasets:
-  #- creditcard  # Credit card fraud dataset
-  #- heloc
-  - covertype
+  - iris        # Iris flower dataset
+  - titanic
+  - breastcancer
+  - ageconditions
   - adult
   - housing
-  #- iris        # Iris flower dataset
-  #- titanic
+  - creditcard  # Credit card fraud dataset
+  - heloc
+  - covertype
+  
   #- bufix
-  #- breastcancer
-  #- ageconditions
+
   
   
 
