--- a/configuration/experiment_config.yml
+++ b/configuration/experiment_config.yml
@@ -4,17 +4,17 @@ retrain: True
 include_models:
   - XGB  # Extreme Gradient Boosting
   - CatBoost
-  - MLP  # Multi-Layer Perceptron
-  - TabNet  # TabNet Classifier 
-  - GATE 
-  - Node
-  - resnet
-  - S1DCNN
-  - CategoryEmbedding
-  - FTTransformer
-  - TabTransformer
-  - GANDALF
-  - AutoInt
+  #- MLP  # Multi-Layer Perceptron
+  #- TabNet  # TabNet Classifier 
+  #- GATE 
+  #- Node
+  #- resnet
+  #- S1DCNN
+  #- CategoryEmbedding
+  #- FTTransformer
+  #- TabTransformer
+  #- GANDALF
+  #- AutoInt
 
   ####- squeezenet
   ####- LightGBM
@@ -23,13 +23,13 @@ include_models:
 include_datasets:
   - iris        # Iris flower dataset
   - titanic
-  - breastcancer
-  - ageconditions
-  - adult
+  #- breastcancer
+  #- ageconditions
+  #- adult
   - housing
-  - creditcard  # Credit card fraud dataset
-  - heloc
-  - covertype
+  #- creditcard  # Credit card fraud dataset
+  #- heloc
+  #- covertype
   
   #- bufix
 
@@ -39,7 +39,7 @@ include_datasets:
 model_configs:
 
   catboost:
-    execution_mode: hyperopt
+    execution_mode: hyperopt_kfold
     normalize_features: mean_std
     encode_categorical: False  #for dataloader 
     return_extra_info: True # for dataloader
@@ -53,70 +53,70 @@ model_configs:
     retrain: False
 
   autoint:
-    execution_mode: hyperopt
+    execution_mode: hyperopt_kfold
     normalize_features: mean_std
     encode_categorical: False  #for dataloader 
     return_extra_info: True # for dataloader
     retrain: False
 
   node:
-    execution_mode: hyperopt
+    execution_mode: hyperopt_kfold
     normalize_features: mean_std
     encode_categorical: False  #for dataloader 
     return_extra_info: True # for dataloader
     retrain: False
 
   gandalf:
-    execution_mode: hyperopt
+    execution_mode: hyperopt_kfold
     normalize_features: mean_std
     encode_categorical: False  #for dataloader 
     return_extra_info: True # for dataloader
     retrain: False
 
   fttransformer:
-    execution_mode: hyperopt
+    execution_mode: hyperopt_kfold
     normalize_features: mean_std
     encode_categorical: False  #for dataloader 
     return_extra_info: True # for dataloader
     retrain: False
 
   tabtransformer:
-    execution_mode: hyperopt
+    execution_mode: hyperopt_kfold
     normalize_features: mean_std
     encode_categorical: False  #for dataloader 
     return_extra_info: True # for dataloader
     retrain: False
 
   categoryembedding:
-    execution_mode: hyperopt
+    execution_mode: hyperopt_kfold
     normalize_features: mean_std
     encode_categorical: False  #for dataloader 
     return_extra_info: True # for dataloader
     retrain: False
 
   squeezenet:
-    execution_mode: hyperopt
+    execution_mode: hyperopt_kfold
     normalize_features: mean_std
     encode_categorical: False  #for dataloader 
     return_extra_info: True # for dataloader
     retrain: False
 
   gate:
-    execution_mode: hyperopt
+    execution_mode: hyperopt_kfold
     normalize_features: mean_std
     encode_categorical: False  #for dataloader 
     return_extra_info: True # for dataloader
     retrain: False
   
   xgb:
-    execution_mode: hyperopt
+    execution_mode: hyperopt_kfold
     normalize_features: mean_std
     encode_categorical: True
     return_extra_info: False
     retrain: True
 
   tabnet:
-    execution_mode: hyperopt
+    execution_mode: hyperopt_kfold
     normalize_features: mean_std
     encode_categorical: False
     return_extra_info: True
@@ -130,14 +130,14 @@ model_configs:
     retrain: True
 
   resnet:
-    execution_mode: hyperopt
+    execution_mode: hyperopt_kfold
     normalize_features: mean_std
     encode_categorical: True
     return_extra_info: True
     retrain: False
 
   s1dcnn:
-    execution_mode: hyperopt
+    execution_mode: hyperopt_kfold
     normalize_features: mean_std
     encode_categorical: True
     return_extra_info: True
