evaluator roc auc naming bug

--- a/configuration/experiment_config.yml
+++ b/configuration/experiment_config.yml
@@ -2,13 +2,13 @@ random_state: 4200
 retrain: True
 # List of models to include in the experiment
 include_models:
-  #- XGB  # Extreme Gradient Boosting
-  #- CatBoost
-  #- MLP  # Multi-Layer Perceptron
+  - XGB  # Extreme Gradient Boosting
+  - CatBoost
+  - MLP  # Multi-Layer Perceptron
   #- TabNet  # TabNet Classifier 
   #- GATE 
   #- Node
-  - resnet
+  #- resnet
   #- S1DCNN
   #- CategoryEmbedding
   #- FTTransformer
@@ -23,13 +23,13 @@ include_models:
 include_datasets:
   - iris        # Iris flower dataset
   - titanic
-  #- breastcancer
+  - breastcancer
   #- ageconditions
   #- adult
   - housing
-  #- creditcard  # Credit card fraud dataset
-  #- heloc
-  #- covertype
+  - creditcard  # Credit card fraud dataset
+  - heloc
+  - covertype
   
   
 
